[package]
name = "alcalc_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
rocket = "0.4.10-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
custom_derive ="0.1.7"
diesel = { version = "1.4.8", features = ["postgres","r2d2"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]
